Like/ dislike for post Api + adding common mappers